# droid-metapatch

./: .gitignore  .mailmap  CHANGELOG.md  README.md  README.org  e4megadrone  metapatch.py  pyproject.toml
.github/scripts/: confirm_version.bash
.github/workflows/: build-and-test.yml  docs.yml  release.yml  workflow-test.yml
contrib/: README.md
docs/: getting-started.org
examples/: arpeggio1  e4megadrone  getting_started
metapatch/: __init__.py  base.py  cli_util.py  functional.py  metapatch.py  options.py  utils.py
metapatch/circuit_generation/: __init__.py  formatting.py  models.py  parsing.py  types.py  writer.py
metapatch/circuit_generation/templates/: aliases.j2  category.j2  init.j2
metapatch/circuits/: README.md  __init__.py  aliases.py  base.py  circuit_types.py  clock.py  cv.py  deprecated.py  logic.py  midi.py  modulation.py  other.py  pitch.py  sequencing.py  ui.py
metapatch/factory/: __init__.py  boilerplate.py  context.py  formatting.py  patch_factory.py  patch_parser.py
scripts/: generate_circuits.py
tests/: conftest.py  e4megadrone.ini  helpers.py  test_circuit_transform.py  test_factory.py  test_labels.py  test_megadrone.py  test_metapatch.py  test_sections.py
tests/patch_generators/: auto_preset.py  disjoint_sections.py  function_to_layers.py  labels.py  sections.py  simple_metapatch.py  with_circuits.py
tests/patches/: disjoint_sections.ini  function_to_layers.ini  labels.ini  sections.ini  with_circuits.ini
