[tool.poetry]
name = "droid-metapatch"
version = "2.2.0"
description = "DROID patch generator"
authors = ["Allan Eising <allan@eising.dk>"]
license = "GPL-3.0-only"
readme = "README.md"
documentation = "https://eising.github.io/droid-metapatch"
repository = "https://github.com/Eising/droid-metapatch"
packages = [{include = "metapatch"}]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"


[tool.poetry.group.generation]
optional = true

[tool.poetry.group.generation.dependencies]
pylatexenc = "^2.10"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[tool.poetry.scripts]
droid-metapatch = "metapatch.cli_util:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
