[project]
name = "droid-metapatch"
version = "3.0.0"
description = "DROID patch generator"
authors = [{ name = "Allan Eising", email = "allan@eising.dk" }]
requires-python = ">=3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "jinja2>=3.1.4,<4",
    "pydantic>=2.11.7",
]

[project.urls]
Repository = "https://github.com/Eising/droid-metapatch"
Documentation = "https://eising.github.io/droid-metapatch"

[project.scripts]
droid-metapatch = "metapatch.cli_util:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "mypy>=1.9.0,<2",
    "ipython>=9.4.0",
]
generation = ["pylatexenc~=2.10"]
docs = ["pdoc>=14.4.0,<15"]

[tool.uv]
default-groups = [
    "dev",
    "generation",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["metapatch"]

[tool.hatch.build.targets.wheel]
include = ["metapatch"]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "metapatch"
module-root = ""

[tool.basedpyright]
venvPath="."
venv=".venv"
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
